dc/s2n-quic-dc/src/snapshots/stream__writer__tests__server_send_pool_caps_local_write.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG distributor created
0 [main] TRACE c#credit.distributor.passes=1
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=3
0 [main] TRACE c#credit.acquire.parked[Medium]=1
0 [main] TRACE c#credit.acquire.bytes=3
0 [main] TRACE c#credit.distributor.passes=1
0.1 [main] TRACE c#credit.release.bytes=3
0.1 [main] TRACE c#credit.release.calls=1
0.1 [main] TRACE c#credit.distributor.passes=1
0.1 [main] TRACE c#credit.distributor.granted=1
0.1 [main] TRACE c#credit.distributor.passes=1
0.1 [main] DEBUG Writer dropping binding_id=1 status=Open next_offset=6 remote_max_data=1048576
0.1 [main] DEBUG Sent FIN binding_id=1
0.1 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0.1 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0.1 [main] DEBUG distributor dropping; closing pool
