dc/s2n-quic-dc/src/snapshots/stream__writer__tests__server_write_msg_unblocks_after_max_data.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#tx.flow.window_blocked=1
0 [main] TRACE c#tx.flow.data_blocked_sent=1
0 [main] DEBUG poll_remote_budget received messages binding_id=1 status=Open msg_count=1
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=9
0 [main] DEBUG Writer dropping binding_id=1 status=Open next_offset=9 remote_max_data=8192
0 [main] DEBUG Sent FIN binding_id=1
0 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
