dc/s2n-quic-dc/src/snapshots/stream__writer__tests__server_writer_respects_peer_recv_window_not_connection_window.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=65536
0 [main] TRACE m#tx.msg.segment_size=262144
0 [main] TRACE m#tx.msg.chunks_per_segment=49
0.05 [main] DEBUG Writer dropping binding_id=1 status=Open next_offset=64680 remote_max_data=65536
0.05 [main] DEBUG Sent QueueReset binding_id=1 error_code=9 reset_target=Stream
0.05 [main] DEBUG event=on_shutdown prev=Open next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0.05 [main] TRACE c#credit.release.bytes=856
0.05 [main] TRACE c#credit.release.calls=1
